Revision history for {{$dist->name}}

{{$NEXT}}

0.093200 Mon Nov 16 21:22:00 CDT 2009
       - Don't delete tmp files in win32, it doesn't work

0.093050 Sun Nov 01 01:21:00 CDT 2009
       - Clarify POD

0.093030 Thu Oct 29 23:32:00 CDT 2009
       - Initial Release
